--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -1,6 +1,13 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #fafafa;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+
+  margin-bottom: 60px;
 }
