--- a/maps/src/index.css
+++ b/maps/src/index.css
@@ -15,3 +15,13 @@ code {
 .Toastify__toast-body {
   white-space: pre-line;
 }
+
+@keyframes fade {
+  from {
+    opacity: 0.8;
+  }
+}
+
+.blink {
+  animation: fade 1s infinite alternate;
+}
