--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -9,3 +9,20 @@ body {
   width: 100%;
   min-height: 100vh;
 }
+
+.new-data-item {
+  position: relative;
+}
+
+.new-data-item::after {
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  right: 100%;
+  padding-left: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  content: " * ";
+  color: red;
+}
